Styles edited for practice area cards, testimonial section, about us and contact us page. Toggle nav bar fixed.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="icon" href="images/Group 3pslogo.ico">
 
-    <script src="index.js" defer></script>
-
 
 </head>
 
@@ -31,8 +29,7 @@
                 <li><a href="pages/about.html">About Us</a></li>
             </ul>
 
-            <a href="pages/contact.html" class="contact-btn"><button>CONTACT
-                    US</button></a>
+            <a href="pages/contact.html"><button class="contact-btn">Contact us</button></a>
 
         </div>
         <div class="toggle">
@@ -57,7 +54,7 @@
                 <p>Michael Jordan, NBA Hall of Famer</p>
             </div>
             <h3>Let's help you win</h3>
-            <button class="pry-btn">BOOK A CONSULTATION</button>
+            <button class="pry-btn">Book a consultation</button>
         </div>
     </section>
 
@@ -123,52 +120,56 @@
 
     </section>
 
+    <div id="practice-areas"></div>
+    <br>
     <!-- PRACTICE-AREA-SECTION -->
-    <section class="practice-area-section" id="practice-areas">
+    <section class="practice-area-section">
         <h2>Practice Areas</h2>
         <div class="practice-areas-box">
             <div class="practice-areas">
                 <img src="images/briefcase icon.svg" alt="">
-                <h3>BUSINESS LAW</h3>
+                <h3>Business Law</h3>
                 <p class="tertiarybtn">Learn More</p>
             </div>
 
             <div class="practice-areas">
                 <img src="images/family icon.svg" alt="">
-                <h3>FAMILY LAW</h3>
+                <h3>Family Law</h3>
                 <p class="tertiarybtn">Learn More</p>
             </div>
 
             <div class="practice-areas">
                 <img src="images/building icon.svg" alt="">
-                <h3>REAL ESTATE LAW</h3>
+                <h3>Real Estate Law</h3>
                 <p class="tertiarybtn">Learn More</p>
             </div>
 
             <div class="practice-areas">
                 <img src="images/gavel icon.svg" alt="">
-                <h3>CRIMINAL LAW</h3>
+                <h3>Criminal Law</h3>
                 <p class="tertiarybtn">Learn More</p>
             </div>
 
             <div class="practice-areas">
                 <img src="images/insured house icon.svg" alt="">
-                <h3>INSURANCE LAW</h3>
+                <h3>Insurance Law</h3>
                 <p class="tertiarybtn">Learn More</p>
             </div>
 
             <div class="practice-areas">
                 <img src="images/health icon.svg" alt="">
-                <h3>HEALTH LAW</h3>
+                <h3>Health Law</h3>
                 <p class="tertiarybtn">Learn More</p>
             </div>
         </div>
 
 
-        <button class="pry-btn">SEE ALL PRACTICE AREAS</button>
+        <button class="pry-btn">See all practice areas</button>
     </section>
+    <div id="our-team"></div>
+    <br>
 
-    <section class="our-team-section" id="our-team">
+    <section class="our-team-section">
         <div class="our-team-title">
             <h2>Our Team</h2>
             <div class="see-all-members">
@@ -206,20 +207,9 @@
 
     </section>
 
-    <section class="testimonial-section" id="testimonials">
+    <section class="testimonial-section">
         <div class="testimonial-section-title">
             <h2>What Our Clients Have Said About Us</h2>
-            <div class="testimonial-section-navigation">
-                <div class="testimonial-nav-box">
-                    <img src="images/arrow_back.svg" alt="">
-                </div>
-
-                <div class="testimonial-nav-box">
-                    <img src="images/arrow_forward.svg" alt="">
-                </div>
-
-
-            </div>
 
         </div>
         <div class="testimonial-box">
@@ -286,46 +276,52 @@
     <section class="customers-section">
         <h2>Who We Represent</h2>
         <div class="customer-logo-group">
-            <div class="customer-logo">
-                <img src="images/tesla.png" alt="">
+            <div class="first-logo-group">
+                <div class="customer-logo">
+                    <img src="images/tesla.png" alt="">
+                </div>
+
+                <div class="customer-logo">
+                    <img src="images/mercedes svg logo.png" alt="">
+                </div>
+
+                <div class="customer-logo">
+                    <img src="images/gucci logo.jpg" alt="">
+                </div>
+                <div class="customer-logo">
+                    <img src="images/twitter logo.png" alt="">
+                </div>
             </div>
 
-            <div class="customer-logo">
-                <img src="images/mercedes svg logo.png" alt="">
+            <div class="second-logo-group">
+                <div class="customer-logo">
+                    <img src="images/attlassian logo.png" alt="">
+                </div>
+
+                <div class="customer-logo">
+                    <img src="images/chanel logo.png" alt="">
+                </div>
+
+                <div class="customer-logo">
+                    <img src="images/dropbox logo.png" alt="">
+                </div>
+
+                <div class="customer-logo">
+                    <img src="images/ferrari logo.png" alt="">
+                </div>
             </div>
 
-            <div class="customer-logo">
-                <img src="images/gucci logo.jpg" alt="">
-            </div>
 
-            <div class="customer-logo">
-                <img src="images/twitter logo.png" alt="">
-            </div>
 
-            <div class="customer-logo">
-                <img src="images/attlassian logo.png" alt="">
-            </div>
-
-            <div class="customer-logo">
-                <img src="images/chanel logo.png" alt="">
-            </div>
-
-            <div class="customer-logo">
-                <img src="images/dropbox logo.png" alt="">
-            </div>
-
-            <div class="customer-logo">
-                <img src="images/ferrari logo.png" alt="">
-            </div>
         </div>
     </section>
 
     <section class="unwinnable-section">
-        <h2>Think your case is "un-winnable?</h2>
+        <h2>Think your case is "un-winnable"?</h2>
         <p>Think again.</p>
         <p>We specialize in getting the best possible outcome for our clients in "un-winnable"
             situations.</p>
-        <button class="pry-btn">BOOK A CONSULTATION NOW</button>
+        <button class="pry-btn">Book a consultation</button>
     </section>
 
     <footer>
@@ -376,6 +372,7 @@
         </div>
     </footer>
 
+    <script src="index.js"></script>
 
 </body>
 
