--- a/pages/contact.html
+++ b/pages/contact.html
@@ -26,8 +26,7 @@
                 <li><a href="about.html">About Us</a></li>
             </ul>
 
-            <a href="pages/contact.html" class="contact-btn"><button>CONTACT
-                    US</button></a>
+            <a href="pages/contact.html"><button class="contact-btn">Contact us</button></a>
 
         </div>
         <div class="toggle">
@@ -101,7 +100,7 @@
                         </textarea>
                 </div>
 
-                <button class="pry-btn">SEND MESSAGE</button>
+                <button class="pry-btn">Send message</button>
             </form>
 
         </div>
