--- a/pages/about.html
+++ b/pages/about.html
@@ -26,8 +26,7 @@
                 <li><a href="about.html">About Us</a></li>
             </ul>
 
-            <a href="contact.html" class="contact-btn"><button>CONTACT
-                    US</button></a>
+            <a href="contact.html"><button class="contact-btn">Contact us</button></a>
 
         </div>
         <div class="toggle">
@@ -59,7 +58,7 @@
 
         </div>
 
-        <button class="pry-btn">BOOK A CONSULTATION</button>
+        <button class="pry-btn">Book a consultation</button>
 
     </section>
     <section class="promo-section2">
@@ -70,7 +69,7 @@
             <h2>We have delivered stellar legal advice to Fortune 500 companies for over 2 decades</h2>
             <p>Pearson Specter Litt has provided legal advice that made and saved a wide array of Fortune 500
                 companies millions</p>
-            <button class="pry-btn">SEE COMPANIES WE REPRESENT</button>
+            <button class="pry-btn">See our clients</button>
         </div>
     </section>
 
@@ -176,7 +175,7 @@
             </div>
         </div>
 
-        <button class="pry-btn">SEE ALL TEAM MEMBERS</button>
+        <button class="pry-btn">See all team members</button>
     </section>
 
     <div class="yellow-divider">
@@ -216,19 +215,19 @@
             <h3>Contact Us</h3>
             <div class="footer-contact-content">
                 <div class="footer-email">
-                    <img src="images/email icon.svg" alt="">
+                    <img src="../images/email icon.svg" alt="">
                     <p>info@psl.com</p>
                 </div>
 
                 <div class="footer-phone">
-                    <img src="images/phone icon.svg" alt="">
+                    <img src="../images/phone icon.svg" alt="">
                     <p>+1-865-9999</p>
                 </div>
 
                 <div class="footer-social">
-                    <img src="images/fb icon.svg" alt="">
-                    <img src="images/twitter icon.svg" alt="">
-                    <img src="images/linkedin icon.svg" alt="">
+                    <img src="../images/fb icon.svg" alt="">
+                    <img src="../images/twitter icon.svg" alt="">
+                    <img src="../images/linkedin icon.svg" alt="">
                 </div>
             </div>
 
