--- a/index.html
+++ b/index.html
@@ -207,6 +207,9 @@
 
     </section>
 
+    <div></div>
+    <div class="testimonials"></div>
+
     <section class="testimonial-section">
         <div class="testimonial-section-title">
             <h2>What Our Clients Have Said About Us</h2>
