--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     </section>
 
     <div></div>
-    <div class="testimonials"></div>
+    <div id="testimonials"></div>
 
     <section class="testimonial-section">
         <div class="testimonial-section-title">
