News post card edited

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
             <div class="news-post">
                 <h3>“We won’t go quietly into the dark.”- PSL boldy declares.</h3>
-                <p>Proceedings continue at the Supreme court today as Pearson Specter Litt takes on the District
+                <p>At the Supreme court today, Pearson Specter Litt takes on the District
                     Attorney’s
                     office in a high profile case involving...</p>
                 <p class="tertiarybtn">
