Footer signature added and styled

--- a/index.html
+++ b/index.html
@@ -375,6 +375,12 @@
         </div>
     </footer>
 
+
+    <div class="footer-signature">
+        <p>
+            <a href="https://www.linkedin.com/in/tomi-joshua">Tomijo</a> built this!
+        </p>
+    </div>
     <script src="index.js"></script>
 
 </body>
